--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,20 @@ __pycache__/
 
 # Abaikan folder yang berisi video yang dihasilkan
 output_videos/
+
+# Virtual Environment
+library/
+venv/
+.venv/
+
+# Python cache
+__pycache__/
+*.pyc
+
+# File IDE
+.vscode/
+.idea/
+
+# File OS
+.DS_Store
+Thumbs.db
